# eureka-lab

./: .gitignore  404.html  README.md  index.html  journal-eureka-lab.mdx  mkdocs.yml  pyproject.toml  sitemap.xml
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  index.md  reference.md  research.md
docs/getting-started/: installation.md  quick-start.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
paper/: main.tex
reference/: index.html
research/: index.html
search/: search_index.json
src/sandbox_science/: __init__.py  auditor.py  cost_model.py  executor.py  policy.py  provenance.py  sandbox.py
src/sandbox_science/utils/: __init__.py  resource_limiter.py  timer.py
tests/: test_budget.py  test_hacking.py  test_provenance.py
